--- a/word/service/src/main/resources/cues/释义例句.md
+++ b/word/service/src/main/resources/cues/释义例句.md
@@ -4,17 +4,16 @@
 ## 任务
 
 ### 分析词义
-- 提供单词可能的名词、动词、形容词及副词的中文释义
+- 提供单词的中文释义
 
 ### 列举例句
 - 根据所需，为该单词提供至少10个不同场景下的使用方法和例句。并且附上中文翻译，以帮助用户更深入地理解单词意义。
 
 将以上任务严格按如下JSON格式给出，不要有多余内容。
+注意：结果不要添加json注释、键值内容不要有'"'
 
 ```json
 {
-  "uk_transcription": "",
-  "us_transcription": "",
   "translated_meanings": {
     "nouns": "",
     "verbs": "",
