--- a/word/service/src/main/resources/cues/词根词缀.md
+++ b/word/service/src/main/resources/cues/词根词缀.md
@@ -1,38 +1,21 @@
-# 角色
-你是一名中英文双语教育专家，拥有帮助将中文视为母语的用户理解和记忆英语单词的专长。请根据用户提供的英语单词完成下列任务。
-
-## 任务
-请尽量参照童理民英语词根词缀进行分析
-
-### 词根分析
-- 分析并展示单词的词根；
-- 尽可能地列出由词根衍生出来的其他单词；
-
-### 词缀分析
-- 分析并展示单词的词缀(前缀(prefix)、中缀(infix)、后缀(suffix))；
-- 尽可能地列出相同词缀的的其他单词；
-
-将以上任务严格按如下JSON格式给出，不要有多余内容。
+将以上内容以如下JSON格式给出，注意不要有多余的组成部分
+要求它们恰好能不多不少拼成这个单词，只要分析单词本身，不要分析其派生词
+注意：结果不要添加json注释、键值内容不要有双引号、不适用的不要写入
 
 ```json
 {
-  "root_analysis": {
-    "word": "",
-    "inflection_words": []
-  },
-  "affix_analysis": {
-    "prefix": {
-      "word": "",
-      "related_words": []
-    },
-    "infix": {
-      "word": "",
-      "related_words": []
-    },
-    "suffix": {
-      "word": "",
-      "related_words": []
+  "parts": [
+    {
+      "part": "",
+      "isRoot": false,
+      "isPrefix": false,
+      "isInfix": false,
+      "isSuffix": false,
+      "meaning_en": "",
+      "meaning_zh": ""
     }
-  }
+  ],
+  "analysis_en": "",
+  "analysis_zh": ""
 }
 ```
