--- a/word/service/src/main/resources/cues/词根词缀.md
+++ b/word/service/src/main/resources/cues/词根词缀.md
@@ -1,5 +1,6 @@
-将以上内容以如下JSON格式给出，注意不要有多余的组成部分
+$input
 要求它们恰好能不多不少拼成这个单词，只要分析单词本身，不要分析其派生词
+并将结果以严格以如下JSON格式给出，注意不要有多余的组成部分
 注意：结果不要添加json注释、键值内容不要有双引号、不适用的不要写入
 
 ```json
