--- a/word/service/src/main/resources/cues/词根词缀.md
+++ b/word/service/src/main/resources/cues/词根词缀.md
@@ -5,8 +5,9 @@
 ## 任务
 
 - $input
-- 要求每部分有精简的中英文释义，以及总结地分析并精简地给出词根词缀结构及其发展历史和文化背景
-- 将结果严格地以如下JSON格式给出。注意：结果不要添加json注释、键值内容不要有双引号、不适用的不要写入
+- 要求每部分有精简的中英文释义，以及总结地分析并精简地给出词根词缀结构及其发展历史和文化背景和它们的中文翻译
+- 将结果严格地以如下JSON格式给出。注意：结果不要添加json注释、键值内容不要有双引号、不适用的不要写入、
+- 'struct_analysis_zh'和'historical_cultural_zh'的内容必须使用中文标点符号进行断句
 
 ```json
 {
