--- a/word/service/src/main/resources/cues/词根词缀.md
+++ b/word/service/src/main/resources/cues/词根词缀.md
@@ -4,10 +4,19 @@
 
 ## 任务
 
+### 词根词缀
+
 - $input
-- 要求每部分有精简的中英文释义，以及总结地分析并精简地给出词根词缀结构及其发展历史和文化背景和它们的中文翻译
-- 将结果严格地以如下JSON格式给出。注意：结果不要添加json注释、键值内容不要有双引号、不适用的不要写入、
-- 'struct_analysis_zh'和'historical_cultural_zh'的内容必须使用中文标点符号进行断句
+- 要求每部分有精简的中英文释义
+- 总结地分析其结构
+
+### 发展历史和文化背景
+
+- 分析并精简地给出词根词缀结构及其发展历史和文化背景(中文)
+
+### 输出JSON
+
+- 将结果严格地放入如下JSON结构中，注意不要有多余的字段，也不要有多余的层次，不要添加json注释
 
 ```json
 {
