--- a/word/service/src/main/resources/cues/词根词缀.md
+++ b/word/service/src/main/resources/cues/词根词缀.md
@@ -8,11 +8,15 @@
 
 - $input
 - 要求每部分有精简的中英文释义
-- 总结地分析其结构
 
-### 发展历史和文化背景
+### 记忆公式
 
-- 分析并精简地给出词根词缀结构及其发展历史和文化背景(中文)
+- 根据词根词缀组成结构，给出记忆公式。
+- 例如: abs分开，分离+tract拉出，去除 → 将某物取出使之分离 → abstract抽象的
+
+### 词源发展历史
+
+- 分析并精简地给出其词源发展历史文化背景(中文)
 
 ### 输出JSON
 
@@ -31,7 +35,7 @@
       "meaning_zh": ""
     }
   ],
-  "struct_analysis_zh": "",
-  "historical_cultural_zh": ""
+  "memory_formula_zh": "",
+  "origin_history_zh": ""
 }
 ```
