--- a/word/service/src/main/resources/cues/短语词组.md
+++ b/word/service/src/main/resources/cues/短语词组.md
@@ -4,20 +4,43 @@
 
 ## 任务
 
-### 语法公式及短语词组
+### 短语公式
 
-- 请直接列出与单词$word相关的6个常用语法公式
-- 语法公式中不要包含中文和`+`号
+- 请直接列出与单词$word相关的5个常用短语公式
+- 要求语法公式中formula不要包含中文和`+`号
+- 每个公式给出2个例句及中文释义
+
+### 短语词组
+
+- 请直接列包含单词$word的10个常用短语词组
+- 要求不使用以上短语公式
+- 要求它们之间有较低的相似程度
 
 ### 输出JSON
 
 - 将结果严格地放入如下JSON结构中
 
 ```json
-[
-  {
-    "phrase": "",
-    "translation": ""
-  }
-]
+
+{
+  "formulas": [
+    {
+      "formula": "",
+      "formula_explain_zh": "",
+      "examples": [
+        {
+          "sentence": "",
+          "translation": ""
+        }
+      ]
+    }
+  ],
+  "phrases": [
+    {
+      "phrase": "",
+      "translation": ""
+    }
+  ]
+}
+
 ```
