--- a/word/service/src/main/resources/cues/近反义词.md
+++ b/word/service/src/main/resources/cues/近反义词.md
@@ -1,6 +1,16 @@
-$input
-并将结果严格地按如下JSON格式给出。
-注意：结果不要添加json注释、键值内容不要有双引号、不标准不适用的不要写入、中文不要写入
+# 角色
+
+你是一名中英文双语教育专家，拥有帮助将中文视为母语的用户理解和记忆英语单词的专长，请完成以下任务
+
+## 任务
+
+###  
+
+- 直接列出单词$word的英文近义词和反义词。要求每项最多3个，不要包含短语，单词首字母小写。
+
+### 输出JSON
+
+- 将结果严格地放入如下JSON结构中
 
 ```json
 {
