--- a/word/service/src/main/resources/cues/词根词缀.md
+++ b/word/service/src/main/resources/cues/词根词缀.md
@@ -7,12 +7,15 @@
 ### 词根词缀
 
 - $input
-- 要求每部分有精简的中英文释义
+- 给出每部分的精简中英文释义
 
 ### 记忆公式
 
-- 根据词根词缀组成结构，给出记忆（演进）公式。
-- 例如: abs分开，分离+tract拉出，去除 → 将某物取出使之分离 → abstract抽象的
+- 直接给出单词$word的记忆公式
+- 例如:
+    - uni单一+vers转向+e → 转为一体的，引申义宇宙 → universe宇宙
+    - univers(e)宇宙+al与...相关的 → 宇宙范围内的 → universal全世界的，普遍的
+    - universal普遍的+ly表示方式，性质 → universally普遍的
 
 ### 词源发展历史
 
