--- a/word/service/src/main/resources/cues/词根词缀.md
+++ b/word/service/src/main/resources/cues/词根词缀.md
@@ -11,11 +11,9 @@
 
 ### 记忆公式
 
-- 直接给出单词$word的记忆公式
-- 例如:
-    - uni单一+vers转向+e → 转为一体的，引申义宇宙 → universe宇宙
-    - univers(e)宇宙+al与...相关的 → 宇宙范围内的 → universal全世界的，普遍的
-    - universal普遍的+ly表示方式，性质 → universally普遍的
+- 直接给出单词"$word"的记忆公式
+- 要求按如下格式给出(以abstract为例):
+    - abs分开，分离 + tract拉出，取出 → 将某事提取出使之分离 → abstract抽象的
 
 ### 词源发展历史
 
