--- a/word/service/src/main/resources/cues/辨析.md
+++ b/word/service/src/main/resources/cues/辨析.md
@@ -6,7 +6,7 @@
 
 ### 单词辨析
 
-直接精简地对单词$word进行辨析，要求只要包含单词的强调概念，使用场景以及1个例句并附上中文翻译
+直接精简地对单词"$word"进行辨析，要求只要包含单词的强调概念，使用场景以及1个例句并附上中文翻译
 
 ### 输出JSON
 
