--- a/word/service/src/main/resources/cues/词根词缀.md
+++ b/word/service/src/main/resources/cues/词根词缀.md
@@ -15,10 +15,6 @@
 - 要求按如下格式给出(以abstract为例):
     - abs分开，分离 + tract拉出，取出 → 将某事提取出使之分离 → abstract抽象的
 
-### 词源发展历史
-
-- 分析并精简地给出其词源发展历史文化背景(中文)
-
 ### 输出JSON
 
 - 将结果严格地放入如下JSON结构中
@@ -36,7 +32,6 @@
       "meaning_zh": ""
     }
   ],
-  "memory_formula_zh": "",
-  "origin_history_zh": ""
+  "memory_formula_zh": ""
 }
 ```
