--- a/word/service/src/main/resources/cues/释义.md
+++ b/word/service/src/main/resources/cues/释义.md
@@ -18,7 +18,16 @@
     "nouns": "",
     "verbs": "",
     "adjectives": "",
-    "adverbs": ""
+    "adverbs": "",
+    "preposition": "",
+    "pronoun": "",
+    "conjunction": "",
+    "article": "",
+    "interjection": "",
+    "numeral": "",
+    "determiner": "",
+    "auxiliary": "",
+    "modalVerb": ""
   }
 }
 ```
