--- a/word/service/src/main/resources/cues/释义.md
+++ b/word/service/src/main/resources/cues/释义.md
@@ -15,19 +15,21 @@
 ```json
 {
   "translated_meanings": {
-    "nouns": "",
-    "verbs": "",
-    "adjectives": "",
-    "adverbs": "",
+    "noun": "",
+    "verb": "",
+    "transitiveVerb": "",
+    "intransitiveVerb": "",
+    "auxiliaryVerb": "",
+    "modalVerb": "",
+    "adverb": "",
+    "adjective": "",
     "preposition": "",
     "pronoun": "",
     "conjunction": "",
     "article": "",
     "interjection": "",
     "numeral": "",
-    "determiner": "",
-    "auxiliary": "",
-    "modalVerb": ""
+    "determiner": ""
   }
 }
 ```
