--- a/word/service/src/main/resources/cues/例句.md
+++ b/word/service/src/main/resources/cues/例句.md
@@ -6,12 +6,12 @@
 
 ### 生成例句
 
-- 为单词"$word"提供至少10个不同场景下的例句及中文翻译，以帮助用户更深入地理解单词意义
-- 要求例句中必须包含"$word"
+- 直接列举#num个当#word的词性严格地为#partOfSpeech时的例句，并附上中文翻译
 
 ### 输出JSON
 
 - 将结果严格地放入如下JSON结构中
+- 当该词在句中不是#partOfSpeech时不要放入
 
 ```json
 {
