--- a/word/service/src/main/resources/cues/词根词缀.md
+++ b/word/service/src/main/resources/cues/词根词缀.md
@@ -7,11 +7,12 @@
 ### 词根词缀
 
 - $input
-- 给出每部分的精简中英文释义
+- 要求各部分词缀连接起来恰好能构成这个单词本身
+- 要求给出每部分的精简中英文释义
 
 ### 记忆公式
 
-- 直接给出单词"$word"的记忆公式
+- 直接给出单词"$word"的记忆公式，以帮助用户理解它的演变过程
 - 要求按如下格式给出(以abstract为例):
     - abs分开，分离 + tract拉出，取出 → 将某事提取出使之分离 → abstract抽象的
 
