--- a/word/service/src/main/resources/cues/词源历史.md
+++ b/word/service/src/main/resources/cues/词源历史.md
@@ -6,7 +6,7 @@
 
 ### 发展历史和文化背景
 
-- 详细介绍单词"$word"的造词来源和发展历史，以及在欧美文化中的内涵
+- 详细介绍单词"$word"的造词来源和历史演变，以及在欧美文化中如何影响现代用法
 - 要求尽量给出世纪年份
 - 要求使用中文，总字数小于150字
 
