--- a/word/service/src/main/resources/cues/词根词缀.md
+++ b/word/service/src/main/resources/cues/词根词缀.md
@@ -12,7 +12,7 @@
 
 ### 记忆公式
 
-- 直接给出单词"$word"的记忆公式，以帮助用户理解它的演变过程
+- 根据单词"$word"的造词来源和历史演变，给出记忆公式，以帮助用户理解其涵义形成过程
 - 要求按如下格式给出(以abstract为例):
     - abs分开，分离 + tract拉出，取出 → 将某事提取出使之分离 → abstract抽象的
 
