--- a/word/service/src/main/resources/cues/释义.md
+++ b/word/service/src/main/resources/cues/释义.md
@@ -31,7 +31,8 @@ $scope
     "article": "",
     "interjection": "",
     "numeral": "",
-    "determiner": ""
+    "determiner": "",
+    "abbreviation": ""
   }
 }
 ```
