--- a/word/service/src/main/resources/cues/公式词组.md
+++ b/word/service/src/main/resources/cues/公式词组.md
@@ -7,9 +7,10 @@
 ### 短语公式
 
 - 请直接列出与单词$word相关的5个常用短语公式
-- 使用sb/sth/to/one/do/doing/don't/be/have/has/being/that/for/adv/adj等连接词
+- 要求公式中的该单词必须是动词形式
+- 要求使用sb/sth/to/one/do/doing/don't/be/have/has/being/that/for/adv/adj等连接词
 - 要求语法公式中formula不要包含中文和`+`号
-- 每个公式给出1个例句及中文释义
+- 要求每个公式给出1个例句及中文释义
 
 ### 短语词组
 
