--- a/word/service/src/main/resources/cues/例句.md
+++ b/word/service/src/main/resources/cues/例句.md
@@ -6,8 +6,8 @@
 
 ### 生成例句
 
-- 直接列举#num个当#word的词性严格地为#partOfSpeech时的例句，并附上中文翻译
-- 要求例句中具有如下含义
+- 直接列举#num个与单词#word有关的不同场景下的例句，并附上中文翻译
+- 要求该单词在例句中独立地、严格地表现为一个#partOfSpeech
 $means
 
 ### 输出JSON
