--- a/word/service/src/main/resources/cues/例句.md
+++ b/word/service/src/main/resources/cues/例句.md
@@ -1,17 +1,13 @@
-# 角色
+# 请完成以下任务
 
-你是一名中英文双语教育专家，拥有帮助将中文视为母语的用户理解和记忆英语单词的专长，请完成以下任务
-
-## 任务
-
-### 生成例句
+## 1. 生成例句
 
 - 直接列举#num个与单词#word有关的不同场景下的例句，并附上中文翻译
 - 要求翻译符合中文表达习惯，不要生硬地翻译
 - 要求该单词在例句中独立地、严格地表现为一个#partOfSpeech
-$means
+  $means
 
-### 输出JSON
+## 2. 输出JSON
 
 - 将结果严格地放入如下JSON结构中
 - 当该词在句中不是#partOfSpeech时不要放入
