--- a/word/service/src/main/resources/cues/公式词组.md
+++ b/word/service/src/main/resources/cues/公式词组.md
@@ -1,10 +1,6 @@
-# 角色
+# 请完成以下任务
 
-你是一名中英文双语教育专家，拥有帮助将中文视为母语的用户理解和记忆英语单词的专长，请完成以下任务
-
-## 任务
-
-### 短语公式
+## 1. 短语公式
 
 - 请直接列出与单词$word相关的5个常用短语公式
 - 要求公式中的该单词必须是动词形式
@@ -12,13 +8,13 @@
 - 要求语法公式中formula不要包含中文和`+`号
 - 要求每个公式给出1个例句及中文释义
 
-### 短语词组
+## 2. 短语词组
 
 - 请直接列出包含单词"$word"的10个常用短语词组
 - 要求不使用以上短语公式
 - 要求它们之间有较低的相似程度
 
-### 输出JSON
+## 3. 输出JSON
 
 - 将结果严格地放入如下JSON结构中
 
