--- a/word/service/src/main/resources/cues/短语词组.md
+++ b/word/service/src/main/resources/cues/短语词组.md
@@ -1,15 +1,11 @@
-# 角色
+# 请完成以下任务
 
-你是一名中英文双语教育专家，拥有帮助将中文视为母语的用户理解和记忆英语单词的专长，请完成以下任务
-
-## 任务
-
-### 短语词组
+## 1. 短语词组
 
 - 请直接列出包含单词"$word"的10个常用短语词组
 - 要求它们之间有较低的相似程度
 
-### 输出JSON
+## 2. 输出JSON
 
 - 将结果严格地放入如下JSON结构中
 
