--- a/word/service/src/main/resources/cues/词根词缀.md
+++ b/word/service/src/main/resources/cues/词根词缀.md
@@ -1,22 +1,18 @@
-# 角色
+# 请完成以下任务
 
-你是一名中英文双语教育专家，拥有帮助将中文视为母语的用户理解和记忆英语单词的专长，请完成以下任务
-
-## 任务
-
-### 词根词缀
+## 1. 词根词缀
 
 - $input
 - 要求各部分词缀连接起来恰好能构成这个单词本身
 - 要求给出每部分的精简中英文释义
 
-### 记忆公式
+## 2. 记忆公式
 
 - 根据单词"$word"的造词来源和历史演变，给出记忆公式，以帮助用户理解其涵义形成过程
 - 要求按如下格式给出(以abstract为例):
-    - abs分开，分离 + tract拉出，取出 → 将某事提取出使之分离 → abstract抽象的
+- abs分开，分离 + tract拉出，取出 → 将某事提取出使之分离 → abstract抽象的
 
-### 输出JSON
+## 3. 输出JSON
 
 - 将结果严格地放入如下JSON结构中
 
