--- a/word/service/src/main/resources/cues/词源历史.md
+++ b/word/service/src/main/resources/cues/词源历史.md
@@ -1,16 +1,12 @@
-# 角色
+# 请完成以下任务
 
-你是一名中英文双语教育专家，拥有帮助将中文视为母语的用户理解和记忆英语单词的专长，请完成以下任务
-
-## 任务
-
-### 发展历史和文化背景
+## 1. 发展历史和文化背景
 
 - 详细介绍单词"$word"的造词来源和历史演变，以及在欧美文化中如何影响现代用法
 - 要求尽量给出世纪年份
 - 要求使用中文，总字数小于150字
 
-### 输出JSON
+## 2. 输出JSON
 
 - 将结果严格地放入如下JSON结构中
 
