--- a/word/service/src/main/resources/cues/辨析.md
+++ b/word/service/src/main/resources/cues/辨析.md
@@ -1,16 +1,10 @@
-# 角色
-
-你是一名中英文双语教育专家，拥有帮助将中文视为母语的用户理解和记忆英语单词的专长，请完成以下任务
-
-## 任务
-
-### 单词辨析
+## 1. 单词辨析
 
 - 直接精简地对单词组"$word"进行辨析
 - 要求精简地给出单词组的共同释义
 - 要求精简地给出每个单词的强调概念，使用场景以及1个例句并附上中文翻译
 
-### 输出JSON
+## 2. 输出JSON
 
 - 将结果严格地放入如下JSON结构中
 
