--- a/word/service/src/main/resources/cues/近反义词.md
+++ b/word/service/src/main/resources/cues/近反义词.md
@@ -1,14 +1,10 @@
-# 角色
+# 请完成以下任务
 
-你是一名中英文双语教育专家，拥有帮助将中文视为母语的用户理解和记忆英语单词的专长，请完成以下任务
-
-## 任务
-
-###   
+## 1. 近反义词
 
 - 直接列出单词"$word"的英文近义词和反义词。要求每项最多3个，不要包含短语，单词首字母小写。
 
-### 输出JSON
+## 2. 输出JSON
 
 - 将结果严格地放入如下JSON结构中
 
