--- a/word/service/src/main/resources/cues/释义.md
+++ b/word/service/src/main/resources/cues/释义.md
@@ -1,16 +1,12 @@
-# 角色
+# 请完成以下任务
 
-你是一名中英文双语教育专家，拥有帮助将中文视为母语的用户理解和记忆英语单词的专长，请完成以下任务
-
-## 任务
-
-### 中文释义
+## 1. 中文释义
 
 - 提供单词"$word"的中文释义
 - 要求必须包含如下词性释义
-$scope
+  $scope
 
-### 输出JSON
+## 2. 输出JSON
 
 - 将结果严格地放入如下JSON结构中
 
